# hello

./: .gitignore  Makefile  Makefile.in  README  config.status  configure  configure.ac
doc/: Makefile  Makefile.in
man/: Makefile  Makefile.am  Makefile.in
script/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  hello  hello.c
src/.deps/: hello.Po
